--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,12 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+  --primary-color: #34495e;
+  --secondary-color: #3498db;
+  --accent-color: #e74c3c;
+  --neutral-color: #ecf0f1;
+  --dark-gray: #2c3e50;
 }
