--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -160,3 +160,58 @@ header button:hover {
   margin-bottom: 30px;
 }
 
+/* WhyChooseUs */
+.why-choose-us {
+  text-align: center;
+  padding: 80px 0;
+}
+
+.why-choose-us h2 {
+  font-size: 46px;
+  font-weight: bold;
+  color: white;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+}
+
+.card {
+  max-width: 350px;
+  padding: 20px;
+  border: 1px solid #3498db;
+  border-radius: 8px;
+  margin: 10px;
+  text-align: center;
+}
+
+.card h3 {
+  color: #3498db;
+  margin-top: 15px;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.card p {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 30px;
+}
+
+/* Adjust the icon color */
+.card svg {
+  color: #3498db;
+}
+
+@media screen and (max-width: 768px) {
+  .card-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+
