--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -188,7 +188,7 @@ header button:hover {
   text-align: center;
 }
 
-.card h3 {
+.titles {
   color: #3498db;
   margin-top: 15px;
   font-size: 28px;
@@ -215,4 +215,84 @@ header button:hover {
   }
 }
 
+/* WhatWeOffer.css */
+.what-we-offer {
+  text-align: center;
+  padding: 40px 10px;
+  width: 100%;
+  background-color: rgb(238, 228, 228);
+  border-radius: 30px;
+}
+
+.service-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+
+.service {
+  max-width: 300px;
+  border: 2px solid #3498db;
+  box-shadow: 2px 1px 32px -12px rgba(52,152,219,0.82);
+ -webkit-box-shadow: 2px 1px 32px -12px rgba(52,152,219,0.82);
+ -moz-box-shadow: 2px 1px 32px -12px rgba(52,152,219,0.82);
+  border-radius: 8px;
+  margin: 10px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.what-we-offer h2{
+  font-size: 46px;
+  font-weight: bold;
+  color: var(--dark-gray);
+}
+
+.what-we-offer button {
+  margin-top: 15px;
+  font-size: 22px;
+  padding: 10px 18px;
+}
+
+.service h3 {
+  color: #3498db;
+  margin-top: 15px;
+}
+
+.service p {
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 30px;
+}
+
+/* Service Header Styles */
+.service-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15px;
+  height: 100px;
+  position: relative;
+}
+
+.service-header img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the image covers the entire header */
+  object-position: top; /* Align the image to the top */
+}
+
+.service-header svg {
+  color: #3498db;
+  position: absolute;
+  top: 60%;
+  background-color: var(--dark-gray);
+  padding: 20px;
+  border-radius: 50%;
+}
+.desc{
+  margin: 40px 20px 20px 20px;
+}
 
