--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -280,8 +280,8 @@ header button:hover {
 .service-header img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Ensure the image covers the entire header */
-  object-position: top; /* Align the image to the top */
+  object-fit: cover;
+  object-position: top; 
 }
 
 .service-header svg {
@@ -419,7 +419,7 @@ footer {
 .faq-list li {
   margin-bottom: 30px;
   background-color: white;
-  border: 1px solid var(--primary-color); /* Add a border to create a box effect */
+  border: 1px solid var(--primary-color); 
   cursor: pointer;
 }
 
@@ -436,15 +436,13 @@ footer {
   font-size: 16px;
   color: #34495e;
   padding: 10px;
-  display: none; /* Initially hide the answer */
+  display: none; 
 }
 
 .faq-list li.active p {
   border-top: 2px solid var(--primary-color);
-  display: block; /* Show the answer when the question is active */
+  display: block;
 }
-
-/* FAQ.css */
 
 .faq-content {
   display: flex;
@@ -452,7 +450,7 @@ footer {
 }
 
 .faq-list {
-  width: 40%; /* Adjust based on your design */
+  width: 40%; 
 }
 
 .faq-item {
@@ -487,7 +485,7 @@ footer {
 }
 
 .faq-image {
-  width: 52%; /* Adjust based on your design */
+  width: 52%;
 }
 
 .faq-image img {
