--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -585,18 +585,22 @@ footer {
 /* Contact Form Section */
 .contact-form-section {
   margin-bottom: 40px;
+  padding: 30px;
+  border: 2px solid var(--secondary-color);
 }
 
 .contact-form-section h2 {
-  color: var(--primary-color);
+  color: white;
   font-size: 36px;
+  text-align: center;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
 .contact-form-section p {
+  text-align: center;
   font-size: 16px;
-  color: #555;
+  color: white;
   margin-bottom: 20px;
 }
 
@@ -613,7 +617,7 @@ label {
   display: block;
   font-size: 16px;
   margin-bottom: 8px;
-  color: #333;
+  color: white;
 }
 
 input,
@@ -627,6 +631,7 @@ textarea {
 }
 
 button {
+  margin-left: 40%;
   background-color: var(--accent-color);
   color: var(--neutral-color);
   padding: 10px 20px;
@@ -642,12 +647,14 @@ button:hover {
 }
 
 /* Contact Information Section */
+
 .contact-info-section {
   margin-bottom: 40px;
 }
 
 .contact-info-section h2 {
-  color: var(--primary-color);
+  color: white;
+
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 20px;
@@ -655,7 +662,7 @@ button:hover {
 
 .contact-info-section p {
   font-size: 16px;
-  color: #555;
+  color: white;
   margin-bottom: 20px;
 }
 
@@ -669,7 +676,7 @@ button:hover {
 }
 
 .contact-info h3 {
-  color: var(--primary-color);
+  color: white;
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
@@ -677,7 +684,7 @@ button:hover {
 
 .contact-info p {
   font-size: 16px;
-  color: #333;
+  color: white;
 }
 
 /* Add more styling as needed */
