--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -21,6 +23,7 @@
   font-weight: bold;
   transition: background-color 0.3s ease; 
   font-size: 16px;
+  font-family: 'Roboto', sans-serif;
 }
 .btn:hover {
   background-color: #c0392b; 
@@ -71,6 +74,7 @@ nav li {
   cursor: pointer;
   font-weight: bold;
   font-size: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 nav li a:hover {
@@ -687,4 +691,66 @@ button:hover {
   color: white;
 }
 
+
 /* Add more styling as needed */
+/* Services.css */
+
+.services-page {
+  padding: 40px 20px;
+  background-color: var(--neutral-color);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin-top: 50px;
+}
+.services-page h1{
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 40px;
+}
+
+.services-container{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.service1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 60px;
+  padding: 20px;
+  max-width: 400px;
+  margin: 10px 10px;
+  background-color: var(--secondary-color);
+  border-radius: 10px;
+}
+
+.service1 h2 {
+  font-size: 28px;
+  color: var(--primary-color);
+  margin: 20px 0;
+}
+
+.service1 p {
+  font-size: 18px;
+  color: #555;
+  line-height: 1.6;
+}
+
+/* Responsive Styling */
+@media screen and (max-width: 768px) {
+  .service1 {
+    margin-bottom: 40px;
+  }
+
+  .service1 h2 {
+    font-size: 24px;
+  }
+
+  .service1 p {
+    font-size: 16px;
+  }
+}
+
