signup page done

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -754,3 +754,57 @@ button:hover {
   }
 }
 
+/* Signup.css */
+main{
+  display: flex;
+  justify-content: center;
+}
+.signup-page {
+  padding: 40px 20px;
+  background-color: var(--neutral-color);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin-top: 50px;
+  text-align: center;
+  width: 50%;
+}
+
+.signup-page h2 {
+  font-size: 28px;
+  color: var(--primary-color);
+  margin-bottom: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.signup-page label {
+  font-size: 18px;
+  color: #555;
+  margin-bottom: 5px;
+}
+
+.signup-page input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+
+
+/* Responsive Styling */
+@media screen and (max-width: 768px) {
+  .signup-page input {
+    width: 80%;
+  }
+
+  .signup-page button {
+    width: 80%;
+  }
+}
+
